# rm_buff

./: .gitignore  LICENSE  README.md  args.yaml  buff.yaml  buff_format.yaml  torch2ov.py
buff_detector/: CMakeLists.txt  package.xml
buff_detector/include/buff_detector/: blade.hpp  detector.hpp  detector_node.hpp  pnp_solver.hpp
buff_detector/launch/: buff_detector.launch.py
buff_detector/models/: best_100b.xml  best_100b_quantized.xml  best_quantized.xml  buff_quantized.xml
buff_detector/models/half/: best_100b.xml  metadata.yaml
buff_detector/src/: detector.cpp  detector.cpp.back  detector_node.cpp  pnp_solver.cpp
buff_interfaces/: CMakeLists.txt  package.xml
buff_interfaces/msg/: Blade.msg  BladeArray.msg  DebugBlade.msg  DebugBladeArray.msg  Rune.msg  RuneInfo.msg
buff_tracker/: CMakeLists.txt  package.xml
buff_tracker/include/buff_tracker/: extended_kalman_filter.hpp  gauss_newton_solver.hpp  tracker.hpp  tracker_node.hpp
buff_tracker/src/: extended_kalman_filter.cpp  gauss_newton_solver.cpp  tracker.cpp  tracker_node.cpp
docs/: 2024EnergyGain.md  buff_calculate.c
example/: buff_calculate.c
models/: buff-1_quantized.xml
rm_buff/: CMakeLists.txt  package.xml
rm_buff_bringup/: CMakeLists.txt  package.xml
rm_buff_bringup/config/: launch_params.yaml
rm_buff_bringup/launch/: rm_buff_bringup.launch.py
scripts/: change_label.py  ov_quantize.py  predict_ov.py  predict_yolo.py  split_data.py
train/: ov_quantize.py  predict.py  torch2ov.py
