<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buff_interfaces</name>
  <version>1.0.0</version>
  <description>RoboMaster buff auto aim user interfaces.</description>
  <maintainer email="defateyz@gmail.com">Zheng Yu</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/FaterYU/rm_buff</url>
  <url type="bugtracker">https://github.com/FaterYU/rm_buff/issues</url>
  <author email="defateyz@gmail.com">Zheng Yu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
