<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buff_tracker</name>
  <version>1.0.0</version>
  <description>RoboMaster buff tracker.</description>
  <maintainer email="defateyz@gmail.com">Zheng Yu</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/FaterYU/rm_buff</url>
  <url type="bugtracker">https://github.com/FaterYU/rm_buff/issues</url>
  <author email="defateyz@gmail.com">Zheng Yu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>eigen</depend>
  <depend>angles</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>vision_opencv</depend>
  <depend>buff_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
