<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_buff_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1042277145@qq.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>buff_detector</depend>
  <depend>buff_tracker</depend>
  <depend>rm_serial_driver</depend>
  <depend>rm_gimbal_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
